--- a/test 12.html
+++ b/test 12.html
@@ -14,6 +14,10 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: linear-gradient(135deg, #74b9ff, #0984e3);
+            background-image: url("test.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
             min-height: 100vh;
             display: flex;
             justify-content: center;
